--- a/WuwuChessClient/WuwuChess/WuwuChess.csproj
+++ b/WuwuChessClient/WuwuChess/WuwuChess.csproj
@@ -54,6 +54,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Register.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Register.Designer.cs">
+      <DependentUpon>Register.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,6 +71,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -75,6 +85,54 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\board.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\兵.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\黑車.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\黑馬.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\黑炮.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\红炮.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\紅車.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\紅馬.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\将.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\士.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\仕.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\帅.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\相.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\象.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\卒.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
