--- a/WuwuChessClient/WuwuChess/WuwuChess.csproj
+++ b/WuwuChessClient/WuwuChess/WuwuChess.csproj
@@ -49,18 +49,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Blank.cs" />
     <Compile Include="Board.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Board.Designer.cs">
       <DependentUpon>Board.cs</DependentUpon>
     </Compile>
+    <Compile Include="Che.cs" />
+    <Compile Include="Chess.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Jiang.cs" />
     <Compile Include="Joinin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,12 +77,14 @@
     <Compile Include="Lobby.Designer.cs">
       <DependentUpon>Lobby.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ma.cs" />
     <Compile Include="NewRoom.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="NewRoom.Designer.cs">
       <DependentUpon>NewRoom.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pao.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs">
@@ -87,7 +93,11 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <Compile Include="Shi.cs" />
+    <Compile Include="Timer.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="Xiang.cs" />
+    <Compile Include="Zu.cs" />
     <EmbeddedResource Include="Board.resx">
       <DependentUpon>Board.cs</DependentUpon>
     </EmbeddedResource>
